--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,7 +42,7 @@
                     <span id="customer_name_error" class="invisible text-danger"><i
                             class="fas fa-exclamation-circle mr-2"></i>You must enter your name!</span><br />
                     <label for="customer_name" class="font-weight-bolder">Customer Name</label>
-                    <input type="text" class="form-control" id="customer_name" placeholder="Enter name">
+                    <input type="text" class="form-control" id="customer_name" placeholder="Enter name" maxlength="20">
                 </div>
                 <div class="col-auto">
                     <button id="order_burger" type="submit" class="btn btn-primary"><i
